[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Entities/BulletScript.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.81947, 3.78109 )

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
modulate = Color( 0.239216, 0.0313726, 0.313726, 1 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 2 )

[node name="SelfDestructTimer" type="Timer" parent="."]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_SelfDestructTimer_timeout"]
